unpackaged/main/default/objects/MaintenancePlan/fields/FSL_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>FSL_Is_Active__c</fullName>
    <formula>AND(IF( EndDate &gt; DateValue(now()), True, False),IF( StartDate &lt; DateValue(now()), True, False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>