unpackaged/main/default/objects/MaintenancePlan/fields/FSL_Same_Date_As_Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>FSL_Same_Date_As_Service_Contract__c</fullName>
    <formula>AND(IF(EndDate = ServiceContract.EndDate,true,false),IF(StartDate = ServiceContract.StartDate,true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same Date As Service Contract</label>
    <type>Checkbox</type>
</CustomField>